force-app/main/default/objects/Account/fields/State_Market__c.field-meta.xml
<CustomField>
    <fullName>State_Market__c</fullName>
    <description>State in which partner operates. May select multiple states.</description>
    <label>State Market</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>AK</fullName>
                
                
                    <label>AK</label>
                
                </value>
            
                <value>
                
                    <fullName>AL</fullName>
                
                
                    <label>AL</label>
                
                </value>
            
                <value>
                
                    <fullName>AR</fullName>
                
                
                    <label>AR</label>
                
                </value>
            
                <value>
                
                    <fullName>AZ</fullName>
                
                
                    <label>AZ</label>
                
                </value>
            
                <value>
                
                    <fullName>CA</fullName>
                
                
                    <label>CA</label>
                
                </value>
            
                <value>
                
                    <fullName>CO</fullName>
                
                
                    <label>CO</label>
                
                </value>
            
                <value>
                
                    <fullName>CT</fullName>
                
                
                    <label>CT</label>
                
                </value>
            
                <value>
                
                    <fullName>DE</fullName>
                
                
                    <label>DE</label>
                
                </value>
            
                <value>
                
                    <fullName>FL</fullName>
                
                
                    <label>FL</label>
                
                </value>
            
                <value>
                
                    <fullName>GA</fullName>
                
                
                    <label>GA</label>
                
                </value>
            
                <value>
                
                    <fullName>HI</fullName>
                
                
                    <label>HI</label>
                
                </value>
            
                <value>
                
                    <fullName>IA</fullName>
                
                
                    <label>IA</label>
                
                </value>
            
                <value>
                
                    <fullName>ID</fullName>
                
                
                    <label>ID</label>
                
                </value>
            
                <value>
                
                    <fullName>IL</fullName>
                
                
                    <label>IL</label>
                
                </value>
            
                <value>
                
                    <fullName>IN</fullName>
                
                
                    <label>IN</label>
                
                </value>
            
                <value>
                
                    <fullName>KS</fullName>
                
                
                    <label>KS</label>
                
                </value>
            
                <value>
                
                    <fullName>KY</fullName>
                
                
                    <label>KY</label>
                
                </value>
            
                <value>
                
                    <fullName>LA</fullName>
                
                
                    <label>LA</label>
                
                </value>
            
                <value>
                
                    <fullName>MA</fullName>
                
                
                    <label>MA</label>
                
                </value>
            
                <value>
                
                    <fullName>MD</fullName>
                
                
                    <label>MD</label>
                
                </value>
            
                <value>
                
                    <fullName>ME</fullName>
                
                
                    <label>ME</label>
                
                </value>
            
                <value>
                
                    <fullName>MI</fullName>
                
                
                    <label>MI</label>
                
                </value>
            
                <value>
                
                    <fullName>MN</fullName>
                
                
                    <label>MN</label>
                
                </value>
            
                <value>
                
                    <fullName>MO</fullName>
                
                
                    <label>MO</label>
                
                </value>
            
                <value>
                
                    <fullName>MS</fullName>
                
                
                    <label>MS</label>
                
                </value>
            
                <value>
                
                    <fullName>MT</fullName>
                
                
                    <label>MT</label>
                
                </value>
            
                <value>
                
                    <fullName>NC</fullName>
                
                
                    <label>NC</label>
                
                </value>
            
                <value>
                
                    <fullName>ND</fullName>
                
                
                    <label>ND</label>
                
                </value>
            
                <value>
                
                    <fullName>NE</fullName>
                
                
                    <label>NE</label>
                
                </value>
            
                <value>
                
                    <fullName>NH</fullName>
                
                
                    <label>NH</label>
                
                </value>
            
                <value>
                
                    <fullName>NJ</fullName>
                
                
                    <label>NJ</label>
                
                </value>
            
                <value>
                
                    <fullName>NM</fullName>
                
                
                    <label>NM</label>
                
                </value>
            
                <value>
                
                    <fullName>NV</fullName>
                
                
                    <label>NV</label>
                
                </value>
            
                <value>
                
                    <fullName>NY</fullName>
                
                
                    <label>NY</label>
                
                </value>
            
                <value>
                
                    <fullName>OH</fullName>
                
                
                    <label>OH</label>
                
                </value>
            
                <value>
                
                    <fullName>OK</fullName>
                
                
                    <label>OK</label>
                
                </value>
            
                <value>
                
                    <fullName>OR</fullName>
                
                
                    <label>OR</label>
                
                </value>
            
                <value>
                
                    <fullName>PA</fullName>
                
                
                    <label>PA</label>
                
                </value>
            
                <value>
                
                    <fullName>RI</fullName>
                
                
                    <label>RI</label>
                
                </value>
            
                <value>
                
                    <fullName>SC</fullName>
                
                
                    <label>SC</label>
                
                </value>
            
                <value>
                
                    <fullName>SD</fullName>
                
                
                    <label>SD</label>
                
                </value>
            
                <value>
                
                    <fullName>TN</fullName>
                
                
                    <label>TN</label>
                
                </value>
            
                <value>
                
                    <fullName>TX</fullName>
                
                
                    <label>TX</label>
                
                </value>
            
                <value>
                
                    <fullName>UT</fullName>
                
                
                    <label>UT</label>
                
                </value>
            
                <value>
                
                    <fullName>VA</fullName>
                
                
                    <label>VA</label>
                
                </value>
            
                <value>
                
                    <fullName>VT</fullName>
                
                
                    <label>VT</label>
                
                </value>
            
                <value>
                
                    <fullName>WA</fullName>
                
                
                    <label>WA</label>
                
                </value>
            
                <value>
                
                    <fullName>WI</fullName>
                
                
                    <label>WI</label>
                
                </value>
            
                <value>
                
                    <fullName>WV</fullName>
                
                
                    <label>WV</label>
                
                </value>
            
                <value>
                
                    <fullName>WY</fullName>
                
                
                    <label>WY</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>