force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>Account is Closed if all Opportunities are Cancelled, Duplicate, Expired or Dead</inlineHelpText>
    <label>CS Status</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Open</fullName>
                
                    <default>true</default>
                
                    <label>Open</label>
                
                </value>
            
                <value>
                
                    <fullName>Closed</fullName>
                
                
                    <label>Closed</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>