force-app/main/default/objects/Account/fields/Subcontractor__c.field-meta.xml
<CustomField>
    <fullName>Subcontractor__c</fullName>
    <label>Subcontractor?</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>Yes</fullName>
                
                
                    <label>Yes</label>
                
                </value>
            
                <value>
                
                    <fullName>No</fullName>
                
                
                    <label>No</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>