force-app/main/default/objects/Account/fields/Suppress_Collections__c.field-meta.xml
<CustomField>
    <fullName>Suppress_Collections__c</fullName>
    <inlineHelpText>If populated, suppresses collection cases, emails and letters. A blank value means collections automation will happen as normal. If suppressed until no longer past due, the morning Days Past Due automation will blank this picklist out when this account is no longer past due.</inlineHelpText>
    <label>Suppress Collections</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suppress collections until no longer past due</fullName>
            </value>
            <value>
                <fullName>Suppress collections forever</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>