force-app/main/default/objects/Account/fields/Time_since_last_Event__c.field-meta.xml
<CustomField>
    <fullName>Time_since_last_Event__c</fullName>
    <description>This field populates via process builder with the number of days since the last completed Event for an account.</description>
    <inlineHelpText>This field populates via process builder with the number of days since the last completed Event for an account.</inlineHelpText>
    <label>Days since last Event</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>