force-app/main/default/objects/Account/fields/Total_Amount_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Billed__c</fullName>
    <inlineHelpText>Total Billed + Late Fees + Adjustments</inlineHelpText>
    <label>Total Billed and Late Fees</label>
    <summarizedField>Account_Bill__c.Total_Due_This_Month__c</summarizedField>
    <summaryForeignKey>Account_Bill__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>