force-app/main/default/objects/Account/fields/Total_Amount_Paid__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_Paid__c</fullName>
    <label>Total Amount Paid</label>
    <summarizedField>Account_Bill__c.Total_Payments_This_Month__c</summarizedField>
    <summaryForeignKey>Account_Bill__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>