force-app/main/default/objects/Account/fields/Total_Billed__c.field-meta.xml
<CustomField>
    <fullName>Total_Billed__c</fullName>
    <inlineHelpText>Sum of due this month, or all discounted Net Metering Credits allocated, not including late fees or adjustments</inlineHelpText>
    <label>Total Billed</label>
    <summarizedField>Account_Bill__c.Due_This_Month__c</summarizedField>
    <summaryForeignKey>Account_Bill__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>