force-app/main/default/objects/Account/fields/Total_Credits_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Total_Credits_Allocated__c</fullName>
    <formula>Credits_Allocated_Adjustments__c + Credits_Allocated_UASB__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Credits Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>