force-app/main/default/objects/Account/fields/Total_Late_Fees__c.field-meta.xml
<CustomField>
    <fullName>Total_Late_Fees__c</fullName>
    <inlineHelpText>Sum of all Late Fees on Account</inlineHelpText>
    <label>Total Late Fees</label>
    <summarizedField>Account_Bill__c.Late_Fees__c</summarizedField>
    <summaryForeignKey>Account_Bill__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>