force-app/main/default/objects/Account/fields/Total_Outstanding_Balance_Merge__c.field-meta.xml
<CustomField>
    <fullName>Total_Outstanding_Balance_Merge__c</fullName>
    <formula>Billing_Account__r.Zuora__Balance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Outstanding Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>