force-app/main/default/objects/Account/fields/Total_Payments__c.field-meta.xml
<CustomField>
    <fullName>Total_Payments__c</fullName>
    <description>Total payments, including overpayments (Rollup of AB:Total Payments This Month)</description>
    <inlineHelpText>Total payments, including overpayments (Rollup of AB:Total Payments This Month)</inlineHelpText>
    <label>Total Payments</label>
    <summarizedField>Account_Bill__c.Total_Payments_This_Month__c</summarizedField>
    <summaryForeignKey>Account_Bill__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>