force-app/main/default/objects/Account/fields/Total_Savings__c.field-meta.xml
<CustomField>
    <fullName>Total_Savings__c</fullName>
    <formula>Savings_Adjustments__c + Savings_UASB__c + UCB_Savings__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>