force-app/main/default/objects/Account/fields/TPF_Paid__c.field-meta.xml
<CustomField>
    <fullName>TPF_Paid__c</fullName>
    <defaultValue>0</defaultValue>
    <description>For the Partner QC Scorecard. No= 0 / Yes = 1</description>
    <inlineHelpText>For the Partner QC Scorecard. No= 0 / Yes = 1</inlineHelpText>
    <label>TPF Paid</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>