force-app/main/default/objects/Account/fields/Tracking_Trigger_Report__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Trigger_Report__c</fullName>
    <formula>HYPERLINK(&quot;/00O21000000I3Rc?pv0=&quot;+Id , &quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Tracking Trigger Report</label>
    <type>Text</type>
</CustomField>