force-app/main/default/objects/Account/fields/UAL_Convert__c.field-meta.xml
<CustomField>
    <fullName>UAL_Convert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>UAL Convert</label>
    <type>Checkbox</type>
</CustomField>