force-app/main/default/objects/Account/fields/UCB_Savings__c.field-meta.xml
<CustomField>
    <fullName>UCB_Savings__c</fullName>
    <label>UCB Savings</label>
    <summarizedField>UASB__c.Net_Member_Credits__c</summarizedField>
    <summaryForeignKey>UASB__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>