force-app/main/default/objects/Account/fields/Unapplied_Overpayments__c.field-meta.xml
<CustomField>
    <fullName>Unapplied_Overpayments__c</fullName>
    <inlineHelpText>Overpayments that have not been applied to a bill, and will be applied to the next bill if for the same project entity</inlineHelpText>
    <label>Unapplied Overpayments</label>
    <summarizedField>Account_Bill__c.Unapplied_Overpayments__c</summarizedField>
    <summaryFilterItems>
        <field>Account_Bill__c.Published__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Bill__c.Parent_Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>