force-app/main/default/objects/Account/fields/Unverified_Address__c.field-meta.xml
<CustomField>
    <fullName>Unverified_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>User chose to use an unverified address during SSF flow or property account was created before validation was added to SSF. Relevant to property accounts only.</inlineHelpText>
    <label>Unverified Address</label>
    <type>Checkbox</type>
</CustomField>