force-app/main/default/objects/Account/fields/Utility_Opp__c.field-meta.xml
<CustomField>
    <fullName>Utility_Opp__c</fullName>
    <formula>IF (Count_of_Eversource_Opportunities__c &gt;= 1, &quot;Eversource&quot;, &quot;National Grid&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utility (Opp)</label>
    <type>Text</type>
</CustomField>