force-app/main/default/objects/Account/fields/Vertically_Integrated__c.field-meta.xml
<CustomField>
    <fullName>Vertically_Integrated__c</fullName>
    <label>Vertically Integrated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>