force-app/main/default/objects/Account/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <label>Service Zip Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>