force-app/main/default/objects/Account/fields/Zuora_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Id__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Set by ZuoraAccountService after it creates the account in Zuora from a converted lead</inlineHelpText>
    <label>Zuora Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>