force-app/main/default/objects/Account/fields/Zuora_Invoice_Message_1_of_2__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Invoice_Message_1_of_2__c</fullName>
    <inlineHelpText>If left blank, the default autopay or non-autopay message will be used. Limited to 200 characters. Shows up in top left box of invoice template</inlineHelpText>
    <label>Zuora Invoice Message 1 of 2</label>
    <type>TextArea</type>
</CustomField>