force-app/main/default/objects/Account/fields/Zuora_Payment_Ref_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Payment_Ref_Id__c</fullName>
    <description>Zuora Payment Reference Id should be passed from the Originations platform during their processes. The Payment Info Id will need to be associated with a customer&apos;s Zuora account once we create it. The Payment information expires, so reference Zuora_Payment_Ref_Id_Expiration_Date__c to make sure the Id is still valid.</description>
    <label>Zuora Payment Ref Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>