force-app/main/default/objects/Account/recordTypes/Account_Default.recordType-meta.xml
<RecordType>
    <fullName>Account_Default</fullName>
    <active>true</active>
    <label>Account (Default)</label>
</RecordType>