force-app/main/default/objects/Account/recordTypes/BW_Founders.recordType-meta.xml
<RecordType>
    <fullName>BW_Founders</fullName>
    <active>true</active>
    <label>BW Founders</label>
</RecordType>