force-app/main/default/objects/Account/recordTypes/BW_Principals.recordType-meta.xml
<RecordType>
    <fullName>BW_Principals</fullName>
    <active>true</active>
    <label>BW Principals</label>
</RecordType>