force-app/main/default/objects/Account/recordTypes/BWC_Founders.recordType-meta.xml
<RecordType>
    <fullName>BWC_Founders</fullName>
    <active>true</active>
    <description>Only Visible to BWC Founders</description>
    <label>BWC Founders</label>
</RecordType>