force-app/main/default/objects/Account/recordTypes/BWC_Principals.recordType-meta.xml
<RecordType>
    <fullName>BWC_Principals</fullName>
    <active>true</active>
    <description>Only Visible to BWC Principals</description>
    <label>BWC Principals</label>
</RecordType>