force-app/main/default/objects/Account/recordTypes/Competitor_Account.recordType-meta.xml
<RecordType>
    <fullName>Competitor_Account</fullName>
    <active>true</active>
    <label>Competitor Account</label>
</RecordType>