force-app/main/default/objects/Account/recordTypes/Executive_Team.recordType-meta.xml
<RecordType>
    <fullName>Executive_Team</fullName>
    <active>true</active>
    <description>To be used by Executive Team only</description>
    <label>Executive Team</label>
</RecordType>