force-app/main/default/objects/Account/recordTypes/Landowner.recordType-meta.xml
<RecordType>
    <fullName>Landowner</fullName>
    <active>true</active>
    <description>Landowner record type used by Site Acquisition</description>
    <label>Landowner</label>
</RecordType>