force-app/main/default/objects/Account/recordTypes/Parent_Account.recordType-meta.xml
<RecordType>
    <fullName>Parent_Account</fullName>
    <active>true</active>
    <label>Parent Account</label>
</RecordType>