force-app/main/default/objects/Account/recordTypes/Residential_Loan.recordType-meta.xml
<RecordType>
    <fullName>Residential_Loan</fullName>
    <active>true</active>
    <description>Record Type for Residential Loan Accounts</description>
    <label>Residential Loan</label>
</RecordType>