force-app/main/default/objects/Account/validationRules/Cancel_Large_Offtake_Manually.validationRule-meta.xml
<ValidationRule>
    <fullName>Cancel_Large_Offtake_Manually</fullName>
    <active>true</active>
    <description>We don&apos;t want to accidentally cancel Anchor or Public Offtake accounts</description>
    <errorConditionFormula>AND( Count_of_Large_Offtake_Opps__c &gt; 0,
     ISBLANK(PRIORVALUE(Cancellation_Request_Date__c)),
     NOT(ISBLANK(Cancellation_Request_Date__c)))</errorConditionFormula>
    <errorDisplayField>Cancellation_Request_Date__c</errorDisplayField>
    <errorMessage>This account has Anchor opportunities (that aren&apos;t already cancelled). Please cancel them manually by updating Utility Account Subscriptions.</errorMessage>
</ValidationRule>