force-app/main/default/objects/Account/validationRules/Partner_Account_Owner_Change_Restriction.validationRule-meta.xml
<ValidationRule>
    <fullName>Partner_Account_Owner_Change_Restriction</fullName>
    <active>true</active>
    <description>This rule prevents people besides Alan Robertson and System Admins from changing the account owner on Partner Accounts.</description>
    <errorConditionFormula>AND(
RecordType.Name=&quot;Partner Account&quot;,
NOT(ISNEW()),
NOT(ISCLONE()),
ISCHANGED(OwnerId),
NOT(OR($User.ProfileId=&quot;00ej0000000tMiv&quot;, 
$User.Id=&quot;0050a00000Jc6mh&quot;)))</errorConditionFormula>
    <errorMessage>Partner Account Owners can only be changed by certain users. Please contact your System Administrator for more information.</errorMessage>
</ValidationRule>