force-app/main/default/objects/Account/validationRules/Require_Cancellation_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cancellation_Reason</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
   AND(NOT(ISBLANK(Cancellation_Request_Date__c)),
       ISBLANK(TEXT(Cancellation_Reason__c))),
   AND(ISBLANK(Cancellation_Request_Date__c),
       NOT(ISBLANK(TEXT(Cancellation_Reason__c)))),
   Cancellation_Request_Date__c &gt; Today()
   )</errorConditionFormula>
    <errorDisplayField>Cancellation_Reason__c</errorDisplayField>
    <errorMessage>Cancellation Reason and Cancellation Request Date need to be filled out at the same time, and the Cancellation Request Date can&apos;t be future dated. Once the customer has requested to cancel, their UASes will be marked Inactive.</errorMessage>
</ValidationRule>