force-app/main/default/objects/Account/validationRules/Require_Cancelled_By.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cancelled_By</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
AND(NOT(ISBLANK(Cancelled_By__c)),ISBLANK(Cancellation_Request_Date__c)),
AND(ISBLANK(Cancelled_By__c), AND(NOT(ISBLANK(Cancellation_Request_Date__c)), Cancellation_Request_Date__c &gt; DATE(2022,01,01)))
)</errorConditionFormula>
    <errorDisplayField>Cancelled_By__c</errorDisplayField>
    <errorMessage>Cancelled By must be entered when the Cancellation Request Date is entered or be blank when there is no Cancellation Request Date</errorMessage>
</ValidationRule>