force-app/main/default/objects/Account/listViews/All_Partner_Accounts.listView-meta.xml
<ListView>
    <fullName>All_Partner_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
    <columns>State_Market__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>ACCOUNT.RECORDTYPE</field>
        
            <operation>equals</operation>
        
            <value>Account.Partner_Account</value>
        
        </filters>
    <label>All Partner Accounts</label>
</ListView>