force-app/main/default/objects/Account/listViews/All_Partner_Accounts1.listView-meta.xml
<ListView>
    <fullName>All_Partner_Accounts1</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>ACCOUNT.RECORDTYPE</field>
        
            <operation>equals</operation>
        
            <value>Account.Partner_Account</value>
        
        </filters>
    <filters>
        
            <field>CORE.USERS.LAST_NAME</field>
        
            <operation>equals</operation>
        
            <value>Howe,Otis,Wells</value>
        
        </filters>
    <label>All Partner Accounts</label>
</ListView>