force-app/main/default/objects/Account/listViews/Florida_Installers.listView-meta.xml
<ListView>
    <fullName>Florida_Installers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Total_Payments__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        
            <field>State__c</field>
        
            <operation>equals</operation>
        
            <value>FL</value>
        
        </filters>
    <filters>
        
            <field>ACCOUNT.RECORDTYPE</field>
        
            <operation>equals</operation>
        
            <value>Account.Partner_Account,Account.Parent_Account</value>
        
        </filters>
    <label>Mark Wilkerson</label>
</ListView>