force-app/main/default/objects/Account/listViews/George_Accounts.listView-meta.xml
<ListView>
    <fullName>George_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        
            <field>CORE.USERS.LAST_NAME</field>
        
            <operation>equals</operation>
        
            <value>Wissing</value>
        
        </filters>
    <label>George Accounts</label>
    <sharedTo>
        
            <group>BFG</group>
        
        </sharedTo>
</ListView>